Fix: Update package name from 'nodejs' to 'farmers-bot' in package.json and package-lock.json

--- a/package.json
+++ b/package.json
@@ -1,17 +1,9 @@
 {
-  "name": "nodejs",
+  "name": "farmers-bot",
   "version": "1.0.0",
-  "description": "",
-  "main": "api/index.js",
-  "scripts": {
-    "start": "node api/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "private": true,
+  "type": "commonjs",
   "dependencies": {
-    "@types/node": "^22.13.11",
     "axios": "^1.11.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
