--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
-  "name": "farmers-bot",
+  "name": "nodejs",
   "version": "1.0.0",
-  "private": true,
-  "type": "commonjs",
+  "description": "",
+  "main": "api/index.js",
+  "scripts": {
+    "start": "node api/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
+    "@types/node": "^22.13.11",
     "axios": "^1.11.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
