Refactor: Update routing rules in vercel.json for improved API handling

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
   "routes": [
-    { "src": "^/$", "dest": "/api" },
-    { "src": "^/webhook$", "dest": "/api/webhook" }
+    { "src": "^/(.*)$", "dest": "/api/$1" }
   ]
 }
